--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >Yes</button>
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >No</button>
                 </div>
+                    <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >Click to view result</button>
 
          </div>
 
