--- a/hypertension.html
+++ b/hypertension.html
@@ -8,6 +8,8 @@
     <title>Cardiovascular  Risk Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="hyp.js"></script>
+    <script src="lib.js"></script>
   </head>
 
   <body>
@@ -29,34 +31,26 @@
         <div class="row p-3 text-primary-emphasis bg-light-subtle border border-primary-subtle rounded-3 gap-3"> 
 
 
-              <div class="row">
-                <div class="input-group mb-3 col">
-                    <span class="input-group-text" for="inputGroupSelect01">Sex</span>
-                    <select class="form-select" id="inputGroupSelect01">
-                      <option selected>Choose...</option>
-                      <option value="1">Male</option>
-                      <option value="2">Female</option>
-                    </select>
+              <!-- <div class="row"> -->
+                <div class="col align-self-center">
+                    <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#0480fc; outline: 3px" onclick="risk()">Assess risk</button>
+                    <p>Hypertension risk: <span id="risk_output">---</span></p>
+                </div>
+                
+                <div class="input-group mb-6 col">
+                    <span class="input-group-text">Systolic Blood Pressure</span>
+                    <input type="text" class="form-control" placeholder="(90-300)" id="sys_input">
+                    <span class="input-group-text">bpm</span> 
                   </div>
                     <div class="input-group col">
-                        <span class="input-group-text">Age</span>
-                        <input type="text" class="form-control" placeholder="Age" id="age_input">
-                        <span class="input-group-text">years</span> 
-                    </div>
-                    <div class="input-group col">
-                        <span class="input-group-text">Weight</span>
-                        <input type="text" class="form-control" placeholder="Weight">
-                        <span class="input-group-text">pounds</span> 
-                    </div>
-                    <div class="input-group col">
-                        <span class="input-group-text">Systolic BP</span>
-                        <input type="text" class="form-control" placeholder="Systolic BP (90 - 200)" id="sysBP_input">
-                        <span class="input-group-text">years</span> 
+                        <span class="input-group-text">Diastolic Blood Pressure</span>
+                        <input type="text" class="form-control" placeholder="(50-240)" id="dia_input">
+                        <span class="input-group-text">bpm</span> 
                     </div>
               </div>
 
 
-               <div class="row">
+               <!-- <div class="row">
                     <div class="input-group col">
                         <span class="input-group-text">Total Cholestrol</span>
                         <input type="text" class="form-control" placeholder="Total (130 - 320)" id="chol_input">
@@ -113,7 +107,7 @@
 
 
             </div>
-
+ -->
 
         
         </div>
