--- a/cancerscreen.html
+++ b/cancerscreen.html
@@ -5,10 +5,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hypertension Risk Calculator</title>
+    <title>Cancer Screening</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="hyp.js"></script>
+    <script src="canc.js"></script>
     <script src="lib.js"></script>
   </head>
 
@@ -21,7 +21,7 @@
         <div class="row">
 
             <div class="col fs-1">
-                Hypertension Assessment
+                Cancer Screening
             </div>
 
         </div>
@@ -37,15 +37,10 @@
                     <p>Hypertension class: <span id="risk_output">---</span></p>
                 </div>
                 
-                <div class="input-group mb-6 col">
-                    <span class="input-group-text">Systolic Blood Pressure</span>
-                    <input type="text" class="form-control" placeholder="(90-300)" id="sys_input">
-                    <span class="input-group-text">bpm</span> 
-                  </div>
                     <div class="input-group col">
-                        <span class="input-group-text">Diastolic Blood Pressure</span>
-                        <input type="text" class="form-control" placeholder="(50-240)" id="dia_input">
-                        <span class="input-group-text">bpm</span> 
+                        <span class="input-group-text">Age</span>
+                        <input type="text" class="form-control" placeholder="(1-120)" id="dia_input">
+                        <span class="input-group-text">years</span> 
                     </div>
               </div>
 
