--- a/hypertension.html
+++ b/hypertension.html
@@ -26,6 +26,24 @@
 
         </div>
 
+        <div class="row">
+            <a href="main.html">Home</a>
+        </div>
+        <div class="row">
+            <div class="col-4 text-center">
+                <div class="d-block d-md-none"><a href="cvrisk.html" style="text-align: center">CVD Risk</a></div>
+                <div class="d-none d-md-block"><a href="cvrisk.html" style="text-align: center">Cardiovascular Risk</a></div>
+            </div>
+            <div class="col-4 text-center">
+                <div class="d-block d-md-none"><a href="cancerscreen.html" style="text-align: center">Cancer</a></div>
+                <div class="d-none d-md-block"><a href="cancerscreen.html" style="text-align: center">Cancer Recommendations</a></div>
+            </div>
+            <div class="col-4 text-center">
+                <div class="d-block d-lg-none"><a href="vax.html" style="text-align: center">Vaccinations</a></div>
+                <div class="d-none d-lg-block"><a href="vax.html" style="text-align: center">Vaccination Recommendations</a></div>
+            </div>
+        </div>
+
 
 
         <div class="row p-3 text-primary-emphasis bg-light-subtle border border-primary-subtle rounded-3 gap-3"> 
