--- a/vax.html
+++ b/vax.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cancer Screening</title>
+    <title>Vaccinations</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="canc.js"></script>
@@ -21,7 +21,7 @@
         <div class="row">
 
             <div class="col fs-1">
-                Cancer Screening
+                Vaccinations
             </div>
             <div class="row">
                 <a href="main.html">Home</a>
@@ -29,14 +29,14 @@
             <div class="row">
                 <div class="col-4 text-center">
                     <div class="d-block d-md-none"><a href="cvrisk.html" style="text-align: center">CVD Risk</a></div>
-                    <div class="d-none d-md-block"><a href="cvrisk.html" style="text-align: center">Cardivascular Risk</a></div>
+                    <div class="d-none d-md-block"><a href="cvrisk.html" style="text-align: center">Cardiovascular Risk</a></div>
                 </div>
                 <div class="col-4 text-center d-block overflow-hidden">
                     <a href="hypertension.html">Hypertension</a>
                 </div>
                 <div class="col-4 text-center">
-                    <div class="d-block d-lg-none"><a href="vax.html" style="text-align: center">Vaccinations</a></div>
-                    <div class="d-none d-lg-block"><a href="vax.html" style="text-align: center">Vaccination Recommendations</a></div>
+                    <div class="d-block d-md-none"><a href="cancerscreen.html" style="text-align: center">Cancer</a></div>
+                    <div class="d-none d-md-block"><a href="cancerscreen.html" style="text-align: center">Cancer Recommendations</a></div>
                 </div>
             </div>
 
