--- a/cvrisk.html
+++ b/cvrisk.html
@@ -8,6 +8,8 @@
     <title>Cardiovascular  Risk Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="hyp.js"></script>
+    <script src="lib.js"></script>
   </head>
 
   <body>
@@ -22,6 +24,23 @@
                 Cardiovascular Disease Risk Calculator
             </div>
 
+        </div>
+
+        <div class="row">
+            <a href="main.html">Home</a>
+        </div>
+        <div class="row">
+            <div class="col-4 text-center d-block overflow-hidden">
+                <a href="hypertension.html">Hypertension</a>
+            </div>
+            <div class="col-4 text-center">
+                <div class="d-block d-md-none"><a href="cancerscreen.html" style="text-align: center">Cancer</a></div>
+                <div class="d-none d-md-block"><a href="cancerscreen.html" style="text-align: center">Cancer Recommendations</a></div>
+            </div>
+            <div class="col-4 text-center">
+                <div class="d-block d-lg-none"><a href="vax.html" style="text-align: center">Vaccinations</a></div>
+                <div class="d-none d-lg-block"><a href="vax.html" style="text-align: center">Vaccination Recommendations</a></div>
+            </div>
         </div>
 
 
@@ -48,10 +67,14 @@
                         <input type="text" class="form-control" placeholder="Weight">
                         <span class="input-group-text">pounds</span> 
                     </div>
-                    <div class="input-group col">
-                        <span class="input-group-text">Systolic BP</span>
-                        <input type="text" class="form-control" placeholder="Systolic BP (90 - 200)" id="sysBP_input">
-                        <span class="input-group-text">years</span> 
+              </div>
+              <div class="row">
+                <p class="font-weight-bold" style="line-height: 0px; font-weight: bold">Blood Pressure</p>
+                <div class="input-group col">
+                        <input type="text" class="form-control" placeholder="Systolic BP (90-300)" id="sysBP_input">
+                        <span class="input-group-text">/</span>
+                        <input type="text" class="form-control" placeholder="Diastolic BP (50-240)" id="diaBP_input">
+                        <span class="input-group-text">bpm</span> 
                     </div>
               </div>
 
@@ -85,11 +108,6 @@
              </div>
 
              <div class="row">
-                <div class="input-group col">
-                    <span class="input-group-text">Diastolic BP</span>
-                    <input type="text" class="form-control" placeholder="Total (60 - 130)">
-                    <span class="input-group-text">mg Hg</span> 
-                </div>
                 <div class="btn-group col" role="group" aria-label="Basic example">
                         <span class="input-group-text">Diabetes?</span>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >Yes</button>
@@ -105,7 +123,7 @@
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >Yes</button>
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >No</button>
                 </div>
-                    <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >Click to view result</button>
+                    <button type="button" onclick="hyprisk()" class="btn btn-outline-light" data-bs-toggle="button" style="color:#006aff" >Click to view result</button>
 
          </div>
 
@@ -113,7 +131,12 @@
 
 
             </div>
-
+                          <!-- Gives info on different hypertension classes -->
+                          <br>
+                          <p id="alerttext" style="color:red"></p>
+                          <h5>Hypertension Class: <span id="classtext"></span></h5>
+                          <p id="desctext">...</p>
+            
 
         
         </div>
