--- a/cvrisk.html
+++ b/cvrisk.html
@@ -8,7 +8,7 @@
     <title>Cardiovascular  Risk Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="hyp.js"></script>
+    <script src="formula.js"></script>
     <script src="lib.js"></script>
   </head>
 
@@ -49,6 +49,7 @@
 
 
               <div class="row">
+                <p class="font-weight-bold" style="line-height: 0px; font-weight: bold">Background</p>
                 <div class="input-group mb-3 col">
                     <span class="input-group-text" for="inputGroupSelect01">Sex</span>
                     <select class="form-select" id="inputGroupSelect01">
@@ -63,14 +64,34 @@
                         <span class="input-group-text">years</span> 
                     </div>
                     <div class="input-group col">
-                        <span class="input-group-text">Weight</span>
-                        <input type="text" class="form-control" placeholder="Weight">
-                        <span class="input-group-text">pounds</span> 
+                        <span class="input-group-text" for="race_input">Race</span>
+                        <select class="form-select" id="race_input">
+                        <option selected>Choose...</option>
+                        <option value="1">Caucasian</option>
+                        <option value="2">African-American</option>
+                        <option value="3">Other</option>
+                        </select>
                     </div>
               </div>
+            <div class="row">
+                <div class="input-group col">
+                    <span class="input-group-text">Height</span>
+                    <input type="text" class="form-control" placeholder="ft">
+                    <span class="input-group-text">'</span>
+                    <input type="text" class="form-control" placeholder="in">
+                    <span class="input-group-text">''</span> 
+                </div>
+                <div class="input-group col">
+                    <span class="input-group-text">Weight</span>
+                    <input type="text" class="form-control" placeholder="Weight">
+                    <span class="input-group-text">pounds</span> 
+                </div>
+            </div>
+
               <div class="row">
                 <p class="font-weight-bold" style="line-height: 0px; font-weight: bold">Blood Pressure</p>
                 <div class="input-group col">
+                        <span class="input-group-text">Blood pressure: </span>
                         <input type="text" class="form-control" placeholder="Systolic BP (90-300)" id="sysBP_input">
                         <span class="input-group-text">/</span>
                         <input type="text" class="form-control" placeholder="Diastolic BP (50-240)" id="diaBP_input">
@@ -80,50 +101,42 @@
 
 
                <div class="row">
+                <p class="font-weight-bold" style="line-height: 0px; font-weight: bold">Cholesterol (mg/dL)</p>
                     <div class="input-group col">
-                        <span class="input-group-text">Total Cholestrol</span>
-                        <input type="text" class="form-control" placeholder="Total (130 - 320)" id="chol_input">
-                        <span class="input-group-text">mg/dL</span> 
+                        <span class="input-group-text">Total</span>
+                        <input type="text" class="form-control" placeholder="(130-320)" id="chol_input">
                     </div>
                     <div class="input-group col">
                         <span class="input-group-text">HDL</span>
-                        <input type="text" class="form-control" placeholder="HDL (20 - 100)" id="hdl_input">
-                        <span class="input-group-text">mg Hg</span> 
+                        <input type="text" class="form-control" placeholder="HDL (20-100)" id="hdl_input">
                     </div>
                     <div class="input-group col">
                         <span class="input-group-text">LDL</span>
                         <input type="text" class="form-control" placeholder="LDL (30 - 300)">
-                        <span class="input-group-text">mg Hg</span> 
-                    </div>
-                    <div class="input-group col">
-                        <span class="input-group-text" for="inputGroupSelect01">Race</span>
-                        <select class="form-select" id="inputGroupSelect01">
-                        <option selected>Choose...</option>
-                        <option value="1">Caucasian</option>
-                        <option value="2">African American</option>
-                        <option value="3">Other</option>
-                        </select>
                     </div>
 
              </div>
 
              <div class="row">
                 <div class="btn-group col" role="group" aria-label="Basic example">
-                        <span class="input-group-text">Diabetes?</span>
-                        <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >Yes</button>
-                        <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >No</button>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="diabetes_input">
+                        <label class="form-check-label" for="diabetes_input">Diabetes?</label>
+                      </div>
                 </div>
                 <div class="btn-group col" role="group" aria-label="Basic example">
-                    <span class="input-group-text">On Asprin Treatment</span>
-                    <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >Yes</button>
-                    <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >No</button>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="asp_input">
+                        <label class="form-check-label" for="asp_input">On Hypertension Treatment?</label>
+                      </div>
                 </div>
                 <div class="btn-group col" role="group" aria-label="Basic example">
-                    <span class="input-group-text">Smoker?</span>
-                    <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >Yes</button>
-                    <button type="button" class="btn btn-outline-light" data-bs-toggle="button" style="color:#212529" >No</button>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="smoker_input">
+                        <label class="form-check-label" for="smoker_input">Present or Past Smoker?</label>
+                      </div>
                 </div>
-                    <button type="button" onclick="hyprisk()" class="btn btn-outline-light" data-bs-toggle="button" style="color:#006aff" >Click to view result</button>
+                    <button type="button" onclick="calculateRisk()" class="btn btn-outline-light" data-bs-toggle="button" style="color:#006aff" >Click to view result</button>
 
          </div>
 
@@ -134,6 +147,7 @@
                           <!-- Gives info on different hypertension classes -->
                           <br>
                           <p id="alerttext" style="color:red"></p>
+                          <p id="risknum">.</p>
                           <h5>Hypertension Class: <span id="classtext"></span></h5>
                           <p id="desctext">...</p>
             
