--- a/cvrisk.html
+++ b/cvrisk.html
@@ -8,7 +8,7 @@
     <title>Cardiovascular  Risk Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="formula.js"></script>
+    <script src="cardio.js"></script>
     <script src="lib.js"></script>
   </head>
 
