--- a/cardio.html
+++ b/cardio.html
@@ -31,11 +31,11 @@
         </div>
         <div class="row">
             <div class="col-4 text-center d-block overflow-hidden">
-                <a href="hypertension.html">Hypertension</a>
+                <a href="hyp.html">Hypertension</a>
             </div>
             <div class="col-4 text-center">
-                <div class="d-block d-md-none"><a href="cancerscreen.html" style="text-align: center">Cancer</a></div>
-                <div class="d-none d-md-block"><a href="cancerscreen.html" style="text-align: center">Cancer Recommendations</a></div>
+                <div class="d-block d-md-none"><a href="cancer.html" style="text-align: center">Cancer</a></div>
+                <div class="d-none d-md-block"><a href="cancer.html" style="text-align: center">Cancer Recommendations</a></div>
             </div>
             <div class="col-4 text-center">
                 <div class="d-block d-lg-none"><a href="vax.html" style="text-align: center">Vaccinations</a></div>
