--- a/hyp.html
+++ b/hyp.html
@@ -31,12 +31,12 @@
         </div>
         <div class="row">
             <div class="col-4 text-center">
-                <div class="d-block d-md-none"><a href="cvrisk.html" style="text-align: center">CVD Risk</a></div>
-                <div class="d-none d-md-block"><a href="cvrisk.html" style="text-align: center">Cardiovascular Risk</a></div>
+                <div class="d-block d-md-none"><a href="cardio.html" style="text-align: center">CVD Risk</a></div>
+                <div class="d-none d-md-block"><a href="cardio.html" style="text-align: center">Cardiovascular Risk</a></div>
             </div>
             <div class="col-4 text-center">
-                <div class="d-block d-md-none"><a href="cancerscreen.html" style="text-align: center">Cancer</a></div>
-                <div class="d-none d-md-block"><a href="cancerscreen.html" style="text-align: center">Cancer Recommendations</a></div>
+                <div class="d-block d-md-none"><a href="cancer.html" style="text-align: center">Cancer</a></div>
+                <div class="d-none d-md-block"><a href="cancer.html" style="text-align: center">Cancer Recommendations</a></div>
             </div>
             <div class="col-4 text-center">
                 <div class="d-block d-lg-none"><a href="vax.html" style="text-align: center">Vaccinations</a></div>
