--- a/main.html
+++ b/main.html
@@ -30,9 +30,9 @@
 
 
               <div class="row">
-                <a href="cvrisk.html">Cardiovascular Risk</a>
-                <a href="hypertension.html">Hypertension</a>
-                <a href="cancerscreen.html">Cancer Screening Recommendations</a>
+                <a href="cardio.html">Cardiovascular Risk</a>
+                <a href="hyp.html">Hypertension</a>
+                <a href="cancer.html">Cancer Screening Recommendations</a>
                 <a href="vax.html">Vaccination Recommendations</a>
               </div>
 
