--- a/cancer.html
+++ b/cancer.html
@@ -28,11 +28,11 @@
             </div>
             <div class="row">
                 <div class="col-4 text-center">
-                    <div class="d-block d-md-none"><a href="cvrisk.html" style="text-align: center">CVD Risk</a></div>
-                    <div class="d-none d-md-block"><a href="cvrisk.html" style="text-align: center">Cardivascular Risk</a></div>
+                    <div class="d-block d-md-none"><a href="cardio.html" style="text-align: center">CVD Risk</a></div>
+                    <div class="d-none d-md-block"><a href="cardio.html" style="text-align: center">Cardivascular Risk</a></div>
                 </div>
                 <div class="col-4 text-center d-block overflow-hidden">
-                    <a href="hypertension.html">Hypertension</a>
+                    <a href="hyp.html">Hypertension</a>
                 </div>
                 <div class="col-4 text-center">
                     <div class="d-block d-lg-none"><a href="vax.html" style="text-align: center">Vaccinations</a></div>
