--- a/main.html
+++ b/main.html
@@ -14,36 +14,110 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
 
-    <div class="container text-center">
+    <!-- nav bar -->
+    <nav class="navbar sticky-top navbar-expand-lg bg-info-subtle">
 
-        <div class="row">
+      <div class="container-fluid">
 
-            <div class="col fs-1">
-                Home
-            </div>
-
-        </div>
-
-
-
-        <div class="row p-3 text-primary-emphasis bg-light-subtle border border-primary-subtle rounded-3 gap-3"> 
-
-
-              <div class="row">
-                <a href="cardio.html">Cardiovascular Risk</a>
-                <a href="hyp.html">Hypertension</a>
-                <a href="cancer.html">Cancer Screening Recommendations</a>
-                <a href="vax.html">Vaccination Recommendations</a>
-              </div>
-
-                
-
-
-            </div>
-
-
+        <!-- main title button -->
+        <a class="navbar-brand f-3 fw-bold" href="main.html">Home</a>
         
+        <!-- button expands to options -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- option and buttons -->
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav w-100 d-flex justify-content-end">
+            <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" aria-current="page" href="main.html">Home</a>
+
+            <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" href="cardio.html" role="button">Cardiovascular Risk</a>
+
+            <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" href="hyp.html" role="button">Hypertension</a>
+
+            <a class="btn btn-outline-primary p-auto w-atuo fs-8 m-2" href="cancer.html" role="button">Cancer Screening</a>
+
+            <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" href="vax.html" role="button">Vaccinations</a>
+          </div>
         </div>
+
+      </div>
+    </nav>
+
+
+    <!-- carousel -->
+    <div id="carouselExampleDark" class="carousel carousel-dark slide">
+
+      <!-- carousel indicators -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+
+
+      <!-- carousel main -->
+      <div class="carousel-inner">
+
+        <!-- img 1 -->
+        <div class="carousel-item active c-cont" data-bs-interval="10000">
+          <!-- image -->
+          <img src="photos/1.jpg" class="d-block w-100 c-img" alt="...">
+
+          <!-- captions/text -->
+          <div class="carousel-caption d-none d-md-block">
+            <div class="bg-danger text-white border rounded-3 p-1 fs-4">
+              First slide label
+              <div class="fs-6">blah blah blah</div>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- img 2 -->
+        <div class="carousel-item c-cont" data-bs-interval="2000">
+          <!-- image -->
+          <img src="photos/2.png" class="d-block w-100 c-img" alt="...">
+
+          <!-- captions/text -->
+          <div class="carousel-caption d-none d-md-block">
+            <div class="bg-danger text-white border rounded-3 p-1 fs-4">
+              Second slide label
+              <div class="fs-6">blah blah blah</div>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- img 3 -->
+        <div class="carousel-item c-cont">
+          <!-- image -->
+          <img src="photos/3.jpg" class="d-block w-100 c-img" alt="...">
+
+          <!-- captions/text -->
+          <div class="carousel-caption d-none d-md-block">
+            <div class="bg-danger text-white border rounded-3 p-1 fs-4">
+              Third slide label
+              <div class="fs-6">blah blah blah</div>
+           </div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- control buttons -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+
+
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+
 
     </div>
   </body>
