--- a/cancer.html
+++ b/cancer.html
@@ -89,8 +89,6 @@
         </div>
 
         
-
-              <p>Click "View Recommendations" to display the recommendations based on your age.</p>
               <p id="alerttext" style="color:red"></p>
               <!-- <p id="breasttext"></p> -->
 
@@ -98,7 +96,7 @@
 
         </div>
 
-        <nav class="navbar sticky-bottom bg-info-subtle mt-5">
+        <nav class="navbar fixed-bottom bg-info-subtle mt-5">
             <div class="w-100 h-100 m-1">
 
                         <!-- title -->
@@ -186,7 +184,7 @@
 
         </nav>
 
-    </div>
+    
   </body>
 
 </html>
