--- a/hyp.html
+++ b/hyp.html
@@ -52,7 +52,7 @@
                 <div class="row row-cols-2 m-5"> 
 
                         <div class="col align-self-center">
-                            <button type="button" class="btn btn-outline-primary rounded-3 mt-5" data-bs-toggle="button" onclick="risk()">Assess risk</button>
+                            <button type="button" class="btn btn-outline  -primary rounded-3 mt-5" data-bs-toggle="button" onclick="risk()">Assess risk</button>
                             <!-- <p>Hypertension class: <span id="risk_output"></span></p> -->
                         </div>
                         
@@ -86,7 +86,7 @@
                 
             </div>
 
-          <nav class="navbar sticky-bottom bg-info-subtle mt-5">
+          <nav class="navbar fixed-bottom bg-info-subtle mt-5">
                         <div class="row row-cols-3 w-100 m-1">
                                     <div class="col">
                                         <div class="float-start fw-bold text-center border border-secondary rounded-3 p-2">Hypertension Class: <span id="classtext"></span></div>
