--- a/cancer.html
+++ b/cancer.html
@@ -106,7 +106,7 @@
 
                         <!-- title -->
                         <div class="col">
-                            <div class="mx-auto fw-bold text-center fs-4">Analysis</div>
+                            <div class="mx-auto fw-bold text-center fs-4">Recommendations</div>
                         </div>
 
                          <!-- title -->
