--- a/cardio.html
+++ b/cardio.html
@@ -116,6 +116,11 @@
                     <div class="col bg-light-subtle rounded-3">
                                 <!-- title -->
                                 <div class="fs-3 fw-bold">Blood Pressure</div>
+
+                                <!-- specification -->
+                                <div class="input-group col mt-3 mb-4">
+                                    <p style="font-size: 13px; line-height: 0px;">In BP, the systolic value goes first.</p>
+                                </div>
                         
                                 <!-- systolic bp -->
                                 <div class="input-group col mt-3 mb-4">
@@ -230,8 +235,11 @@
 
                     <!-- analysis -->
                     <div class="row-cols-1 w-100 rounded-3 m-3 p-2">
-
                                 <!-- class of cv risk -->
+                                <div id="rclasstext" class="col mx-auto fw-bold text-center fs-6"> </div>
+                                 <!-- advice/description --> 
+                                <div id="riskadvicetext" class="col mx-auto fs-8 text-center"> </div> 
+                                <!-- class of hypertension risk -->
                                 <div id="classtext" class="col mx-auto fw-bold text-center fs-6"> </div> 
                                 <!-- advice/description -->
                                 <div id="desctext" class="col mx-auto fs-8 text-center"></div>
