--- a/vax.html
+++ b/vax.html
@@ -99,7 +99,7 @@
 
                         <!-- title -->
                         <div class="col">
-                            <div class="mx-auto fw-bold text-center fs-4">Analysis</div>
+                            <div class="mx-auto fw-bold text-center fs-4">Recommended Vaccines</div>
                         </div>
 
                         <!-- title -->
