--- a/main.html
+++ b/main.html
@@ -54,6 +54,7 @@
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
 
 
@@ -61,47 +62,61 @@
       <div class="carousel-inner">
 
         <!-- img 1 -->
-        <div class="carousel-item active c-cont" data-bs-interval="10000">
+        <div class="carousel-item active c-cont vh-75" data-bs-interval="10000">
           <!-- image -->
-          <img src="photos/1.jpg" class="d-block w-100 c-img" alt="...">
+          <img src="photos/s2.jpg" class="d-block w-100 c-img" alt="...">
 
           <!-- captions/text -->
           <div class="carousel-caption d-none d-md-block">
             <div class="bg-danger text-white border rounded-3 p-1 fs-4">
-              First slide label
-              <div class="fs-6">blah blah blah</div>
+              <a href="cardio.html" style="color: white">Your CV health matters!</a>
+              <div class="fs-6">Click the link to see your cardiovascular disease risk.</div>
             </div>
           </div>
         </div>
 
 
         <!-- img 2 -->
-        <div class="carousel-item c-cont" data-bs-interval="2000">
+        <div class="carousel-item c-cont vh-75" data-bs-interval="2000">
           <!-- image -->
-          <img src="photos/2.png" class="d-block w-100 c-img" alt="...">
+          <img src="photos/s1.jpg" class="d-block w-100 c-img" alt="...">
 
           <!-- captions/text -->
           <div class="carousel-caption d-none d-md-block">
             <div class="bg-danger text-white border rounded-3 p-1 fs-4">
-              Second slide label
-              <div class="fs-6">blah blah blah</div>
+              <a href="hyp.html" style="color: white">Do you have hypertension?</a>
+              <div class="fs-6">Find out if you do and get some recommendations.</div>
             </div>
           </div>
         </div>
 
-
         <!-- img 3 -->
-        <div class="carousel-item c-cont">
+        <div class="carousel-item c-cont vh-75" data-bs-interval="10000">
           <!-- image -->
-          <img src="photos/3.jpg" class="d-block w-100 c-img" alt="...">
+          <img src="photos/s4.jpg" class="d-block w-100 c-img" alt="...">
 
           <!-- captions/text -->
           <div class="carousel-caption d-none d-md-block">
             <div class="bg-danger text-white border rounded-3 p-1 fs-4">
-              Third slide label
-              <div class="fs-6">blah blah blah</div>
+              <a href="cancer.html" style="color: white">Cancer is no joke.</a>
+              <div class="fs-6">Click the link to see what cancer screenings are recommended for you.</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- img 3 -->
+        <div class="carousel-item c-cont vh-75" data-bs-interval="2000">
+          <!-- image -->
+          <img src="photos/s3.jpg" class="d-block w-100 c-img" alt="...">
+
+          <!-- captions/text -->
+          <div class="carousel-caption d-none d-md-block">
+            <div class="bg-danger text-white border rounded-3 p-1 fs-4">
+              <a href="vax.html" style="color: white">Get vaccinated!</a>
+              <div class="fs-6">Click the link to see what vaccinations are recommended for you.</div>
            </div>
         </div>
+        
       </div>
 
     </div>
