--- a/hyp.html
+++ b/hyp.html
@@ -20,7 +20,7 @@
 
         <div class="container-fluid">
   
-          <a class="navbar-brand f-3 fw-bold" href="main.html">Hypertension Risk Calculator</a>
+          <a class="navbar-brand f-3 fw-bold" href="index.html">Hypertension Risk Calculator</a>
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
   
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav w-100 d-flex justify-content-end">
-              <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" aria-current="page" href="main.html">Home</a>
+              <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" aria-current="page" href="index.html">Home</a>
   
               <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" href="cardio.html" role="button">Cardiovascular Risk</a>
   
