--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- option and buttons -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav w-100 d-flex justify-content-end">
+          <div class="navbar-nav w-100 h-80 d-flex justify-content-end">
             <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" aria-current="page" href="index.html">Home</a>
 
             <a class="btn btn-outline-primary p-auto w-auto fs-8 m-2" href="cardio.html" role="button">Cardiovascular Risk</a>
