--- a/cardio.html
+++ b/cardio.html
@@ -119,7 +119,7 @@
 
                                 <!-- specification -->
                                 <div class="input-group col mt-3 mb-4">
-                                    <p style="font-size: 13px; line-height: 0px;">In BP, the systolic value goes first.</p>
+                                    <span style="font-size: 13px; line-height: 0px; text-align:center">BP: Systolic/Diastolic</span>
                                 </div>
                         
                                 <!-- systolic bp -->
