--- a/cardio.html
+++ b/cardio.html
@@ -20,7 +20,7 @@
     <nav class="navbar sticky-top navbar-expand-lg bg-info-subtle">
 
         <div class="container-fluid">
-  
+        <img src="/photos/logo.png" style="text-align: left; height: 40px; padding-right: 10px" alt="logo">
         <!-- main title button -->
         <a class="navbar-brand f-3 fw-bold" href="index.html">Cardiovascular Risk Calculator</a>
           
