--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       </div>
     </nav>
 
-
+          <h1 class="text-center">Welcome to...</h1>
+          <img src="/photos/logo2.png"  style="display: block; margin-left: auto; margin-right: auto; height: 50px; padding: 0px" alt="logo">
     <!-- carousel -->
     <div id="carouselExampleDark" class="carousel carousel-dark slide">
 
