--- a/cardio.html
+++ b/cardio.html
@@ -20,7 +20,7 @@
     <nav class="navbar sticky-top navbar-expand-lg bg-info-subtle">
 
         <div class="container-fluid">
-        <img src="/photos/logo.png" style="text-align: left; height: 40px; padding-right: 10px" alt="logo">
+        <img src="/photos/logo.png" style="text-align: left; height: 30px; padding-right: 10px" alt="logo">
         <!-- main title button -->
         <a class="navbar-brand f-3 fw-bold" href="index.html">Cardiovascular Risk Calculator</a>
           
@@ -125,14 +125,14 @@
                                 <!-- systolic bp -->
                                 <div class="input-group col mt-3 mb-4">
                                         <span class="input-group-text fs-8">Systolic</span>
-                                        <input type="number" min="90" max="300"class="form-control" placeholder="(90-300)" id="sysBP_input">
+                                        <input type="text"class="form-control" placeholder="(90-300)" id="sysBP_input">
                                         <span class="input-group-text fs-8">bpm</span>
                                 </div>
 
                                 <!-- distolic bp -->
                                 <div class="input-group col">
                                         <span class="input-group-text fs-8">Diastolic</span>
-                                        <input type="number" min="50" max="240" class="form-control" placeholder="(50-240)" id="diaBP_input">
+                                        <input type="text" class="form-control" placeholder="(50-240)" id="diaBP_input">
                                         <span class="input-group-text fs-8">bpm</span> 
                                 </div>
                     </div>
